--- a/installserver/templates/index.html
+++ b/installserver/templates/index.html
@@ -11,6 +11,8 @@
         font-weight: 600;
         display: flex;
         justify-content: center;
+        background-color: #766161;
+        color: white;
       }
       h2 {
         margin: 0;
