--- a/installserver/templates/callback.html
+++ b/installserver/templates/callback.html
@@ -14,6 +14,8 @@
         align-items: center;
         justify-content: center;
         height: 100%;
+        background-color: #766161;
+        color: white;
       }
       p {
         width: 400px;
