--- a/installserver/templates/callback.html
+++ b/installserver/templates/callback.html
@@ -27,6 +27,8 @@
     </style>
   </head>
   <body>
+    <img class="landing-intro-row-olive" src= {{ url_for('static', filename =
+    'images/recruitbotolive.png') }} width="100" height="100">
     <p>
       Congrats, Olive was installed in Slack. Please reach out to us to finish
       the installation 1. Generate your Greenhouse token so we can connect to
