--- a/installserver/templates/callback.html
+++ b/installserver/templates/callback.html
@@ -31,7 +31,7 @@
     'images/recruitbotolive.png') }} width="100" height="100">
     <p>
       Congrats, Olive was installed in Slack. Please reach out to us to finish
-      the installation 1. Generate your Greenhouse token so we can connect to
+      the installation to 1. Generate your Greenhouse token so we can connect to
       Greenhouse, and 2. Customize it how you like it! We apologize for the
       manual process, we're working on getting it automated and self-serve!
     </p>
