add admin user scope

--- a/installserver/templates/index.html
+++ b/installserver/templates/index.html
@@ -50,7 +50,7 @@
       <h3>Automate your onsite interview Slack channels</h3>
       <div class="landing-action-row">
         <a
-          href="https://slack.com/oauth/v2/authorize?state={{ state }}&redirect_uri={{ redirect_uri }}&client_id={{ client_id }}&scope={{ scopes }}"
+          href="https://slack.com/oauth/v2/authorize?state={{ state }}&redirect_uri={{ redirect_uri }}&client_id={{ client_id }}&scope={{ scopes }}&user_scope={{ user_scopes }}"
           ><img
             alt="Add to Slack"
             height="40"
